# DAW_zrythm

./: .clang-format-ignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  conanfile.py  package-lock.cmake  requirements-base.txt  requirements.txt
build-aux/: Dockerfile
cmake/: CompilerCache.cmake  FaustPlugins.cmake  GetVersionFromGitTag.cmake  SetupVst3Sdk.cmake  TargetHelpers.cmake  cpack_pre_build.cmake
cmake/patches/: juce-vst3-param-cache-resync.patch
conan/: global.conf  settings_user.yml
conan/profiles/: _apple_clang  _asan_ubsan  _clang  _common  _gcc  _msvc  _qt_common  _qt_macos  _qt_windows  _rtsan  _tsan  appleclang_asan_ubsan  appleclang_build  appleclang_debug  appleclang_release  appleclang_tsan  clang_asan_ubsan  clang_debug  clang_release  clang_rtsan  clang_tsan  gcc_asan_ubsan  gcc_debug  gcc_release  gcc_tsan  msvc_asan  msvc_debug  msvc_release
data/: CMakeLists.txt
data/plugins/: CMakeLists.txt  gen-faust.py  zrythm-arch.cpp
data/plugins/generated-cpp/: compressor.cpp  cubic_distortion.cpp  flanger.cpp  gate_stereo.cpp  highpass_filter.cpp  lowpass_filter.cpp  parametric_eq.cpp  peak_limiter.cpp  phaser.cpp  smooth_delay.cpp  triple_synth.cpp  wah4.cpp  white_noise.cpp  zita_rev1.cpp
data/schemas/: project.schema.json
doc/dev/: CMakeLists.txt  debugging.md
doc/man/: CMakeLists.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/actions/: CMakeLists.txt  arranger_object_creator.cpp  arranger_object_creator.h  arranger_object_selection_operator.cpp  clip_operator.cpp  clip_operator.h  plugin_importer.cpp  plugin_importer.h  track_collection_operator.cpp  uuid_property_operator.cpp  uuid_property_operator.h
src/commands/: CMakeLists.txt  change_uuid_identifiable_object_property_command.h  resize_arranger_objects_command.cpp  set_clip_loop_points_command.cpp  set_clip_loop_points_command.h
src/controllers/: recording_materializer.cpp  recording_materializer.h  recording_mode.h
src/dsp/: CMakeLists.txt  chord_audition_state.cpp  chord_suggestion.h  content_time_warp.cpp  content_time_warp.h  curve.cpp  curve.h  file_audio_source.cpp  file_audio_source.h  graph_export.cpp  loop_tempo_estimator.cpp  loop_tempo_estimator.h  midi_activity_provider.cpp  peak_dsp.cpp  peak_dsp.h  poly_voice_manager.cpp  poly_voice_manager.h  port_connections_manager.cpp  position.cpp  position.h  synth_voice.h  tempo_map.cpp  tempo_map.h  tempo_map_qml_adapter.h  tick_types.h  timeline_data_cache.cpp  timeline_data_cache.h
src/engine/session/: sample_processor.cpp
src/gui/: CMakeLists.txt
src/gui/backend/: action_controller.h  chord_preset_manager.cpp  plugin_manager.cpp  plugin_manager.h  project_manager.cpp  project_session.cpp  project_session.h  zrythm_application.cpp  zrythm_application.h
src/gui/dsp/: quantize_options.h
src/gui/qml/: DemoView.qml
src/gui/qquick/: CMakeLists.txt  arranger_grid_canvas_item.cpp  arranger_grid_canvas_item.h  (+35 more)
src/plugins/: CMakeLists.txt  carla_native_plugin.cpp  clap_plugin.cpp  clap_plugin.h  internal_plugin_base.cpp  internal_plugin_base.h  juce_plugin.cpp  juce_plugin.h  plugin.h  plugin_all.h  plugin_descriptor.cpp  plugin_factory.h  plugin_library.cpp  plugin_protocol.cpp
src/utils/: CMakeLists.txt  audio_file_writer.cpp  enum_utils.h  math_utils.cpp  math_utils.h  qt.h  serialization.h  utf8_string.h  uuid_reference.h
tests/: CMakeLists.txt
tests/benchmarks/dsp/: CMakeLists.txt
tests/benchmarks/utils/: CMakeLists.txt
tests/helpers/: bundled_plugin_finder.h  mock_uuid_object.h  test_plugin_finder.h  zrythm_helper.cpp  zrythm_helper.h
tests/integration/: CMakeLists.txt  bundled_plugins_scan_test.cpp  plugin_integration_test.cpp  project_serialization_roundtrip_test.cpp  test_plugins_scan_test.cpp
tests/test_plugins/: CMakeLists.txt  gain_dsp.h  sine_synth.h  test_gain_clap.cpp  test_gain_vst3.cpp  test_synth_clap.cpp  test_synth_vst3.cpp
tests/unit/actions/: CMakeLists.txt  arranger_object_selection_operator_test.cpp  clip_operator_test.cpp  plugin_importer_test.cpp  plugin_operator_test.cpp  uuid_property_operator_test.cpp
tests/unit/commands/: CMakeLists.txt  add_plugin_command_test.cpp  add_track_command_test.cpp  change_uuid_identifiable_object_property_command_test.cpp  delete_tracks_command_test.cpp  move_arranger_objects_command_test.cpp  move_plugins_command_test.cpp  remove_plugins_command_test.cpp  resize_arranger_objects_command_test.cpp  set_clip_loop_points_command_test.cpp
tests/unit/controllers/: CMakeLists.txt  project_json_serializer_roundtrip_test.cpp  project_loader_test.cpp  project_saver_test.cpp  recording_materializer_test.cpp
tests/unit/dsp/: CMakeLists.txt  content_time_warp_test.cpp  loop_tempo_estimator_test.cpp  modulator_macro_processor_test.cpp  poly_voice_manager_test.cpp  tempo_map_qml_adapter_test.cpp  tempo_map_test.cpp  tick_types_test.cpp  timeline_data_cache_test.cpp
tests/unit/gui/qml/: CMakeLists.txt
tests/unit/gui/qquick/: CMakeLists.txt  chord_clip_canvas_test.cpp  chord_row_list_model_test.cpp  generic_plugin_ui_controller_test.cpp  meter_processor_test.cpp  waveform_peak_computation_test.cpp
tests/unit/plugins/: CMakeLists.txt  clap_plugin_test.cpp  faust_plugin_test.cpp  faust_synth_voice_test.cpp  juce_plugin_test.cpp  plugin_factory_test.cpp  plugin_group_test.cpp
tests/unit/structure/arrangement/: CMakeLists.txt  arranger_object_owner_test.cpp  automation_clip_test.cpp  clip_renderer_test.cpp  clip_test.cpp  loop_segment_iterator_test.cpp  midi_note_test.cpp  timeline_data_provider_test.cpp
tests/unit/structure/project/: CMakeLists.txt  project_registry_test.cpp
tests/unit/structure/scenes/: CMakeLists.txt
tests/unit/structure/tracks/: CMakeLists.txt  channel_subgraph_builder_test.cpp  channel_test.cpp
tests/unit/utils/: CMakeLists.txt  io_test.cpp  uuid_identifiable_object_test.cpp
tools/: conanrun_wrapper.sh  export_conan_recipes.py  regen_conan_lockfile.sh  tsan_suppressions.supp  ubsan_suppressions.supp
(+84 files in other folders)
